refactor(docs): update README.md file with project information